# zourit

./: .env  .env.example  Cargo.toml  Readme.md  example.db  zourit.db
migrations/: 001_init.sql
postman/: README.md  Zourit API.postman_collection.json  Zourit Development.postman_environment.json
src/: auth.rs  database.rs  entity.rs  main.rs  middleware.rs  repository.rs
src/handlers/: admin_handler.rs  auth_handler.rs  mod.rs  person_handler.rs  product_handler.rs
src/models/: mod.rs  person.rs  product.rs
src/routes/: auth_routes.rs  mod.rs  person_routes.rs  product_routes.rs
src/templates/: mod.rs
templates/: index.html
templates/admin/: users.html
templates/persons/: create.html  index.html  show.html
